compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__redundant_function_capture_in_pipe_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2116
expression: "\n  pub fn wobble(_) { 1 }\n\n  pub fn main() {\n    1 |> wobble |> wobble(_)\n  }\n"
snapshot_kind: text
---
----- SOURCE CODE

  pub fn wobble(_) { 1 }

  pub fn main() {
    1 |> wobble |> wobble(_)
  }


----- WARNING
warning: Redundant function capture
  ┌─ /src/warning/wrn.gleam:5:27
  │
5 │     1 |> wobble |> wobble(_)
  │                           ^ You can safely remove this

This function capture is redundant since the value is already piped as the
first argument of this call.

See: https://tour.gleam.run/functions/pipelines/
