compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__redundant_let_assert.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1667
expression: "\npub fn main() {\n  let assert wibble = [1, 2, 3]\n  wibble\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let assert wibble = [1, 2, 3]
  wibble
}


----- WARNING
warning: Redundant assertion
  ┌─ /src/warning/wrn.gleam:3:7
  │
3 │   let assert wibble = [1, 2, 3]
  │       ^^^^^^ You can remove this

This assertion is redundant since the pattern covers all possibilities.
