compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__redundant_let_assert_on_custom_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1679
expression: "\npub type Wibble {\n    Wibble(Int, Bool)\n}\n\npub fn main() {\n  let assert Wibble(_, bool) = Wibble(1, True)\n  bool\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
    Wibble(Int, Bool)
}

pub fn main() {
  let assert Wibble(_, bool) = Wibble(1, True)
  bool
}


----- WARNING
warning: Redundant assertion
  ┌─ /src/warning/wrn.gleam:7:7
  │
7 │   let assert Wibble(_, bool) = Wibble(1, True)
  │       ^^^^^^ You can remove this

This assertion is redundant since the pattern covers all possibilities.
