compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__result_in_case_discarded.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1116
expression: "\npub fn main(x) {\n  case x {\n    _ -> Error(Nil)\n  }\n  Nil\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    _ -> Error(Nil)
  }
  Nil
}

----- WARNING
warning: Unused result value
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     _ -> Error(Nil)
5 │ │   }
  │ ╰───^ The Result value created here is unused

Hint: If you are sure you don't need it you can assign it to `_`.
